--- a/public/stylesheet/default.css
+++ b/public/stylesheet/default.css
@@ -9,6 +9,7 @@ h1 {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    display: block;
 }
 .list-container{
     position: relative;
