--- a/public/stylesheet/default.css
+++ b/public/stylesheet/default.css
@@ -5,7 +5,7 @@ h1 {
     text-align: center;
     margin: 20px;
 }
-.link-container a {
+.link {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
