--- a/public/stylesheet/default.css
+++ b/public/stylesheet/default.css
@@ -6,11 +6,10 @@ h1 {
     margin: 20px;
 }
 .link {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    display: block;
+    margin: 8px;
 }
 .link-container{
-    position: relative;
+    display:flex;
+    flex-direction:column;
+    align-items: center;
 }
